added debug drawing

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,12 +9,17 @@ Size=176,62
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=650,20
+Pos=1299,27
 Size=550,680
 Collapsed=0
 
 [Window][Inspector]
-Pos=13,121
-Size=216,208
+Pos=53,648
+Size=443,486
+Collapsed=0
+
+[Window][Test window]
+Pos=34,20
+Size=972,279
 Collapsed=0
 
