--- a/imgui.ini
+++ b/imgui.ini
@@ -9,17 +9,22 @@ Size=176,62
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1299,27
+Pos=1318,22
 Size=550,680
 Collapsed=0
 
 [Window][Inspector]
-Pos=53,648
-Size=443,486
+Pos=2,281
+Size=415,486
 Collapsed=0
 
 [Window][Test window]
-Pos=34,20
+Pos=0,3
 Size=972,279
+Collapsed=0
+
+[Window][Dockspace demo]
+Pos=0,0
+Size=1872,1040
 Collapsed=0
 
