--- a/imgui.ini
+++ b/imgui.ini
@@ -9,22 +9,27 @@ Size=176,62
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1318,22
-Size=550,680
+Pos=1784,9
+Size=441,1264
 Collapsed=0
 
 [Window][Inspector]
-Pos=2,281
-Size=415,486
+Pos=3,204
+Size=287,301
 Collapsed=0
 
 [Window][Test window]
-Pos=0,3
-Size=972,279
+Pos=7,6
+Size=1761,197
 Collapsed=0
 
 [Window][Dockspace demo]
 Pos=0,0
-Size=1872,1040
+Size=2240,1340
+Collapsed=0
+
+[Window][Game Viewport]
+Pos=294,203
+Size=1475,1159
 Collapsed=0
 
