added gizmos and proper styling

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,35 +1,51 @@
-[Window][Debug##Default]
-Pos=-125,61
-Size=400,400
-Collapsed=0
-
-[Window][Test Window]
-Pos=353,172
-Size=176,62
-Collapsed=0
-
-[Window][Dear ImGui Demo]
-Pos=1784,9
-Size=441,1264
-Collapsed=0
-
-[Window][Inspector]
-Pos=3,204
-Size=287,301
-Collapsed=0
-
-[Window][Test window]
-Pos=7,6
-Size=1761,197
-Collapsed=0
-
-[Window][Dockspace demo]
+[Window][Dockspace Demo]
 Pos=0,0
 Size=2240,1340
 Collapsed=0
 
-[Window][Game Viewport]
-Pos=303,187
-Size=1475,1091
+[Window][Debug##Default]
+Pos=60,60
+Size=400,400
 Collapsed=0
+
+[Window][Test window]
+Pos=8,34
+Size=2224,140
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][Game Viewport]
+Pos=8,176
+Size=1686,1122
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Dear ImGui Demo]
+Pos=1696,176
+Size=536,562
+Collapsed=0
+DockId=0x00000003,1
+
+[Window][Properties]
+Pos=1696,740
+Size=536,558
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][Level editor stuff]
+Pos=1696,176
+Size=536,562
+Collapsed=0
+DockId=0x00000003,0
+
+[Docking][Data]
+DockSpace         ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,34 Size=2224,1298 Split=Y
+  DockNode        ID=0x00000007 Parent=0x6D3A3A6E SizeRef=2224,1264 Split=Y Selected=0x8081D1E6
+    DockNode      ID=0x00000001 Parent=0x00000007 SizeRef=2224,140 Selected=0x8081D1E6
+    DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=2224,1122 Split=X Selected=0xAE7BB42F
+      DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=1686,614 Selected=0xAE7BB42F
+      DockNode    ID=0x00000009 Parent=0x00000004 SizeRef=536,614 Split=Y Selected=0xE927CF2F
+        DockNode  ID=0x00000003 Parent=0x00000009 SizeRef=536,343 Selected=0xE927CF2F
+        DockNode  ID=0x0000000A Parent=0x00000009 SizeRef=536,341 Selected=0xC89E3217
+  DockNode        ID=0x00000008 Parent=0x6D3A3A6E SizeRef=2224,32 CentralNode=1
 
