added slot machine

--- a/imgui.ini
+++ b/imgui.ini
@@ -10,42 +10,36 @@ Collapsed=0
 
 [Window][Test window]
 Pos=8,34
-Size=2224,140
+Size=2224,1264
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000007,3
 
 [Window][Game Viewport]
-Pos=8,176
-Size=1686,1122
+Pos=8,34
+Size=2224,1264
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000007,2
 
 [Window][Dear ImGui Demo]
-Pos=1696,176
-Size=536,562
+Pos=8,34
+Size=2224,1264
 Collapsed=0
-DockId=0x00000003,1
+DockId=0x00000007,1
 
 [Window][Properties]
-Pos=1696,740
-Size=536,558
+Pos=8,34
+Size=2224,1264
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000007,4
 
 [Window][Level editor stuff]
-Pos=1696,176
-Size=536,562
+Pos=8,34
+Size=2224,1264
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000007,0
 
 [Docking][Data]
-DockSpace         ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,34 Size=2224,1298 Split=Y
-  DockNode        ID=0x00000007 Parent=0x6D3A3A6E SizeRef=2224,1264 Split=Y Selected=0x8081D1E6
-    DockNode      ID=0x00000001 Parent=0x00000007 SizeRef=2224,140 Selected=0x8081D1E6
-    DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=2224,1122 Split=X Selected=0xAE7BB42F
-      DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=1686,614 Selected=0xAE7BB42F
-      DockNode    ID=0x00000009 Parent=0x00000004 SizeRef=536,614 Split=Y Selected=0xE927CF2F
-        DockNode  ID=0x00000003 Parent=0x00000009 SizeRef=536,343 Selected=0xE927CF2F
-        DockNode  ID=0x0000000A Parent=0x00000009 SizeRef=536,341 Selected=0xC89E3217
-  DockNode        ID=0x00000008 Parent=0x6D3A3A6E SizeRef=2224,32 CentralNode=1
+DockSpace   ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,34 Size=2224,1298 Split=Y
+  DockNode  ID=0x00000007 Parent=0x6D3A3A6E SizeRef=2224,1264 Selected=0xAE7BB42F
+  DockNode  ID=0x00000001 Parent=0x6D3A3A6E SizeRef=2224,32 CentralNode=1
 
