--- a/imgui.ini
+++ b/imgui.ini
@@ -10,36 +10,35 @@ Collapsed=0
 
 [Window][Test window]
 Pos=8,34
-Size=2224,1264
+Size=1038,1206
 Collapsed=0
-DockId=0x00000007,3
+DockId=0x00000001,3
 
 [Window][Game Viewport]
 Pos=8,34
-Size=2224,1264
+Size=1038,1206
 Collapsed=0
-DockId=0x00000007,2
+DockId=0x00000001,2
 
 [Window][Dear ImGui Demo]
 Pos=8,34
-Size=2224,1264
+Size=1038,1206
 Collapsed=0
-DockId=0x00000007,1
+DockId=0x00000001,1
 
 [Window][Properties]
 Pos=8,34
 Size=2224,1264
 Collapsed=0
-DockId=0x00000007,4
+DockId=0x00000001,4
 
 [Window][Level editor stuff]
 Pos=8,34
-Size=2224,1264
+Size=1038,1206
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000001,0
 
 [Docking][Data]
-DockSpace   ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,34 Size=2224,1298 Split=Y
-  DockNode  ID=0x00000007 Parent=0x6D3A3A6E SizeRef=2224,1264 Selected=0xAE7BB42F
-  DockNode  ID=0x00000001 Parent=0x6D3A3A6E SizeRef=2224,32 CentralNode=1
+DockNode  ID=0x00000001 Pos=8,34 Size=1038,1206 Selected=0xAE7BB42F
+DockSpace ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,34 Size=2224,1298 CentralNode=1 Selected=0xAE7BB42F
 
